--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "author": "Tom <tborychowski@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "electron-prebuilt": "^0.36.1"
+    "electron-packager": "^8.1.0",
+    "electron-prebuilt": "^1.3.8"
   }
 }
