--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "package": "electron-packager . --platform=darwin"
   },
   "author": "Tom <tborychowski@gmail.com>",
-  "license": "MIT",
-  "dependencies": {},
+  "license": "GPL-3.0-or-later",
   "devDependencies": {
     "electron-packager": "^8.1.0",
     "electron-prebuilt": "^1.3.8"
